--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.projectlombok:lombok:1.18.30'
     annotationProcessor('org.projectlombok:lombok:1.18.30')
+    testAnnotationProcessor 'org.projectlombok:lombok'
     implementation platform('com.google.cloud:libraries-bom:26.1.5')
     implementation 'com.google.cloud:google-cloud-vision'
     implementation 'com.google.cloud:google-cloud-storage'
